# TestQt

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
Data/: sql.ini
src/TestLib/: CMakeLists.txt  testlib.cpp  testlib.h
src/TestWidget/: CMakeLists.txt  TestWidget_global.h  mdiwidget.cpp  mdiwidget.h  mdiwidget.ui  sqltest.cpp  sqltest.h
src/WindowLib/: CMakeLists.txt
src/WindowLib/MyChart/: CMakeLists.txt  MyChart_global.h  mycharts.cpp  mycharts.h
